Updated TitanicModel notebook documentation to show instructions on how to use a jupyter notebook as well as python fundamentals.

--- a/TitanicModel.ipynb
+++ b/TitanicModel.ipynb
@@ -5,21 +5,85 @@
    "metadata": {},
    "source": [
     "# Titanic Model\n",
+    "<hr>\n",
+    "\n",
+    "**Important Note:** To save your work and notes for later navigate to the `File` tab on the top of the noteboook and click `Download as Notebook (.ipynb)` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Understanding How To Use A Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:red\"> ***Click Me*** </span>\n",
+    "\n",
+    "If you see this cell turn blue that means this cell is focused"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:red\"> ***Double Click Me*** </span>\n",
+    "\n",
+    "If you see this cell turn green that means this cell is selected for edit.\n",
+    "To get out of edit mode, click `shift` and `enter` at the same time.\n",
+    "This will run the cell with the edits you made, if you made any at all and shift the focus to the cell below. \n",
+    "\n",
+    "You can also press `ESC` or `Escape` to switch from edit mode to focus mode. **Note** that you need to run the cell for any markdown style to take effect, do this by clicking `shift` and `enter` at the same time.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:red\"> ***Click Me Again*** </span>\n",
+    "\n",
+    "If you see this cell turn blue that means this cell is focused. \n",
+    "\n",
+    "**When the cell is focused you can press keys on the keyboard to help you navigate the notebook cells easier.**\n",
+    "\n",
+    "**Once A Cell Is Selected You Can Press The Following Keys For Their Respective Actions:**\n",
+    "- `up arrow` - shift focus to cell above\n",
+    "- `down arrow` - shift focus to cell below\n",
+    "\n",
+    "\n",
+    "- `Enter` - edit cell after cell is selected\n",
+    "- `Shift and Enter` runs the cell and then shifts focus to the cell below.\n",
+    "\n",
+    "\n",
+    "- `a` - insert cell above the selected cell\n",
+    "- `b` - insert cell below the selected cell\n",
+    "\n",
+    "\n",
+    "- `m` - changes the cell type to a markdown cell, which allows you to write notes about code cells\n",
+    "- `y` - changes the cell type to a code cell, which allows you to write and execute code.\n",
+    "\n",
+    "\n",
+    "- `dd` - (double pressing `d`) will delete the selected cell. If you accidently delete a cell navigate to the *`Edit`* toolbar near the top of the screen and click `Undo Delete Cells`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "### This Is A ***`Markdown`*** Cell\n",
+    "\n",
+    "Use markdown cells to write notes about your code and experiments.\n",
+    "\n",
+    "Once focused click `Enter` to edit the markdown cell, once finished click `Shift` and `Enter` at the same time for the edits to take place.\n",
+    "\n",
+    "*Code cells look different than mark down cells.*\n",
+    "\n",
     "<hr>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Imports"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Import `pandas` and `numpy`  for Data Manipulation"
    ]
   },
   {
@@ -28,8 +92,139 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "# This is a code cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Once focused click `Enter` to edit the code cell\n",
+    "\n",
+    "print(\"Hello!\") # Press shift and enter to run cell to see output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "## Python Fundamentals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Declaring* Variables\n",
+    "\n",
+    "We can save some `value`, the result of a `calculation`, or even the output of a `function` to a `variable`. This is particularly important for making your code `concise`, `readable`, and `efficient`.\n",
+    "\n",
+    "**Try Running the code cell below pressing `shift` and `enter` at the same time after there is focus on the cell:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declare variables with specific values so that we can use them later in the notebook code cells\n",
+    "a = 1\n",
+    "b = 2\n",
+    "\n",
+    "print(a) # Print the value of `a` to the screen\n",
+    "print(b) # Print the value of `b` to the screen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declare variables\n",
+    "text_one = \"Hello\"\n",
+    "text_two = \"World!\"\n",
+    "\n",
+    "print(text_one, text_two)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operations On Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Addition **`+`**\n",
+    "The `+` symbol is works differently depending on the data type of the value of the variable.\n",
+    "\n",
+    "Run the following code to notice the difference:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a + b) # Output is a number data type\n",
+    "\n",
+    "print(text_one + text_two) # Output is a text data type; Note there are no spaces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "**Other operators:**\n",
+    "\n",
+    "- `-`: subtraction\n",
+    "- `*`: multiplication\n",
+    "- `//`: whole number division\n",
+    "- `/`: floating point division\n",
+    "\n",
+    "Operator precedence in calculation: **PEMDAS**\n",
+    "<img src=\"https://vignette.wikia.nocookie.net/math/images/c/c0/PEMDAS.png/revision/latest?cb=20120220215230&path-prefix=en\"\n",
+    "width= \"350px;\">\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Necessary Libraries \n",
+    "Libraries are groupings of code written by other developers. We use libraries so that we do not need to reinvent the wheel to do common programming tasks. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import `pandas` and `numpy`  for Data Manipulation\n",
+    "\n",
+    "The ***`as`*** keyword maps a library to a shorted expression that can be used in later code, this way if the library name is super long we don't have to type as many characters every time we want to use one of the libraries functions. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd # import pandas as an alias called `pd` \n",
+    "import numpy as np# import numpy as an alias called `np` "
    ]
   },
   {
@@ -150,6 +345,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Remove the `#` symbol in the code cell below to temporarily remove the survived column from the data frame and print it to the screen**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -187,7 +389,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Built-in Docs: `?`"
+    "#### Built-in Docs: `?`\n",
+    "\n",
+    "**Remove the `#` symbol in the code cell below to look at the documentation for any library function you want to learn how to use**"
    ]
   },
   {
