Updated readme and notebook with operator and python cheat sheets

--- a/TitanicModel.ipynb
+++ b/TitanicModel.ipynb
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
+    "<br> \n",
     "\n",
     "**Other operators:**\n",
     "\n",
@@ -228,9 +228,19 @@
     "- `//`: whole number division\n",
     "- `/`: floating point division\n",
     "\n",
+    "\n",
+    "\n",
     "Operator precedence in calculation: **PEMDAS**\n",
-    "<img src=\"https://vignette.wikia.nocookie.net/math/images/c/c0/PEMDAS.png/revision/latest?cb=20120220215230&path-prefix=en\"\n",
+    "<img alt=\"image showing opertors order using pemdas\" src=\"https://vignette.wikia.nocookie.net/math/images/c/c0/PEMDAS.png/revision/latest?cb=20120220215230&path-prefix=en\"\n",
     "width= \"350px;\">\n",
+    "\n",
+    "<img height=\"400\" width=\"400\" alt=\"image of different programming operators\" src=\"./assets/operators-daydream.jpg\">\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Learn more:\n",
+    "<a href=\"https://github.com/SoftStackFactory/titanic-demo/blob/master/assets/beginners-python-cheat-sheets.pdf\"> Other Python programming cheat sheets<a>\n",
+    "\n",
     "<br>"
    ]
   },
@@ -238,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing Necessary Libraries \n",
+    "##### Importing Necessary Libraries \n",
     "Libraries are groupings of code written by other developers. We use libraries so that we do not need to reinvent the wheel to do common programming tasks. "
    ]
   },
