altered readme to have a link to a notebook hosted on binder

--- a/TitanicModel.ipynb
+++ b/TitanicModel.ipynb
@@ -5,6 +5,11 @@
    "metadata": {},
    "source": [
     "# Titanic Model\n",
+    "\n",
+    "Demo for a simple app to host a fitted model, trained on a subset of the titanic disaster dataset.\n",
+    "The model was fitted on three dimensions of data, therefore, if we can input these three dimensions: the person's Gender, their Age, and whether or not they travelled alone, the model should be able to return whether or not that person would have durvived the titanic as well as a (%) chance of survival.\n",
+    "\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/SoftStackFactory/titanic-demo/master)\n",
     "<hr>\n",
     "\n",
     "**Important Note:** To save your work and notes for later navigate to the `File` tab on the top of the noteboook and click `Download as Notebook (.ipynb)` "
@@ -234,7 +239,7 @@
     "<img alt=\"image showing opertors order using pemdas\" src=\"https://vignette.wikia.nocookie.net/math/images/c/c0/PEMDAS.png/revision/latest?cb=20120220215230&path-prefix=en\"\n",
     "width= \"350px;\">\n",
     "\n",
-    "<img height=\"400\" width=\"400\" alt=\"image of different programming operators\" src=\"./assets/operators-daydream.jpg\">\n",
+    "<img height=\"800\" width=\"500\" alt=\"image of different programming operators\" src=\"./assets/operators-daydream.jpg\">\n",
     "\n",
     "<br>\n",
     "\n",
